# vajrachain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
consensus/: Cargo.toml
consensus/src/: engine.rs  lib.rs  staking.rs  validator.rs
contracts/: Cargo.toml
contracts/src/: lib.rs  native.rs  registry.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
economics/: Cargo.toml
economics/src/: inflation.rs
governance/: Cargo.toml
governance/src/: engine.rs  lib.rs  proposal.rs
identity/: Cargo.toml
identity/src/: credential.rs  did.rs  lib.rs  zk.rs
interop/: Cargo.toml
interop/src/: bridge.rs  lib.rs  message.rs
ledger/: Cargo.toml
ledger/src/: block.rs  lib.rs  merkle.rs  transaction.rs
network/: Cargo.toml
network/src/: behavior.rs  error.rs  lib.rs  messages.rs  service.rs
network/tests/: integration_test.rs
node/: Cargo.toml
node/src/: main.rs
security/: Cargo.toml
security/src/: fork_choice.rs  lib.rs  slashing.rs
storage/: Cargo.toml
storage/src/: db.rs  lib.rs  state_compliance.rs
vm/: Cargo.toml
vm/src/: bytecode.rs  gas.rs  interpreter.rs  lib.rs
