[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "dns", "websocket", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio"] }
tokio = { version = "1.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
tracing = "0.1"
ledger = { path = "../ledger" }
consensus = { path = "../consensus" }
